Fixed responsive bug on mobile view.

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -20,7 +20,7 @@
 }
 
 @include mobileView() {
-  :host .embed {
+  :host .app-column div {
     width: 100%;
   }
 }
